# client-for-tvdb

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
client_for_tvdb/: __init__.py  client.py  config.py  end_points.py  exceptions.py
tests/: test_client.py  test_client_for_tvdb.py
tests/files/: search_result.json
